--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -33,7 +33,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="翻訳"
+        android:text="検索"
         android:id="@+id/button2"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
@@ -54,5 +54,12 @@
             android:layout_toEndOf="@+id/scrollView2"
             android:layout_below="@+id/scrollView5" />
     </ScrollView>
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_alignTop="@+id/button2"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
