--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,15 +39,9 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_alignTop="@+id/imageView1" />
-
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/spinner2"
-        android:layout_marginStart="166dp"
         android:layout_below="@+id/button"
-        android:layout_toEndOf="@+id/scrollView" />
+        android:layout_toEndOf="@+id/scrollView"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
