--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,11 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="ocr"
-         />
-
-    <ImageView
         android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:id="@+id/imageView1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button" />
+        android:layout_height="wrap_content"
+        android:text="文字認識あり"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -42,6 +34,21 @@
         android:id="@+id/spinner2"
         android:layout_below="@+id/button"
         android:layout_toEndOf="@+id/scrollView"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:text="文字認識なし"
+        android:id="@+id/button4"
+        android:layout_alignParentTop="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="検索履歴"
+        android:id="@+id/button5"
+        android:layout_below="@+id/spinner2"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
