--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -60,6 +60,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
         android:layout_alignTop="@+id/button2"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
