--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/button"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:text="文字認識あり"
+        android:text="写真撮影"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
 
@@ -44,11 +44,19 @@
         android:layout_alignParentTop="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:text="検索履歴"
         android:id="@+id/button5"
         android:layout_below="@+id/spinner2"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:text="保存画像"
+        android:id="@+id/button6"
+        android:layout_alignTop="@+id/button5"
+        android:layout_alignStart="@+id/button" />
 
 </RelativeLayout>
